bat.string1.lessons.bat.string1.Last2.scala.error
last2:8: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if (str.charAt(i)==str.charAt(str.length-2) && str.charAt(i+1)=str.charAt(str.length-1)){
                                                ^